# electif_aviation_climat

./: .gitignore  BE1 - Hypotheses initiales.ipynb  BE2 - Levier Efficacite-Correction.ipynb  BE2 - Levier Efficacite.ipynb  BE3 - Levier Decarbonation 2.ipynb  BE3 - Levier Decarbonation.ipynb  BE4 - CAST.ipynb  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: BE1 - Hypotheses initiales-checkpoint.ipynb  BE2 - Levier Efficacite-checkpoint.ipynb  BE3 - Levier Decarbonation-checkpoint.ipynb  BE4 - CAST-checkpoint.ipynb
BE-decarbo/: .~lock.electricity-prod-source-stacked copie.csv#  IRENA.csv  electricity-prod-source-stacked copie.csv  electricity-prod-source-stacked.csv  essai.csv  evol_efficacite_H2.csv  share-elec-by-source.csv
BE-decarbonation/: BE3 - Levier Decarbonation.ipynb  prod-elec.csv
Data/: Aviation_Data.csv
