[tool.black]
line-length = 100

[tool.poetry]
name = "cast"
version = "0.0.0"
description = "CAST: Climate and Aviation - Sustainable Trajectories"
readme = "README.md"
authors = [
    "Thomas PLANES <thomas.planes@isae-supaero.fr>",
    "Scott DELBECQ <scott.delbecq@isae-supaero.fr>"
]
keywords = [
    "aviation",
    "climate change"
]
license = "MIT"
homepage = "https://github.com/supaero-aircraft-design/cast"

[tool.poetry.dependencies]
python = "^3.7.0,<3.10"
numpy = "*"
scipy = "*"
pandas = "*"
xlrd = "1.2.0"
openpyxl = "*"
voila = "*"
jupyterlab = "*"
matplotlib = "*"
ipywidgets = "*"
markdown = "*"
ipympl = "*"
tornado = "*"
notebook = "*"
scikit-learn = "*"
plotly = "*"
ipyvuetify = "*"
aenum = "*"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^3.0"
coverage = { extras = ["toml"], version = "^5.5" }
pre-commit = "^2.14.1"
black = { version = "21.9b0", extras = ["jupyter"], allow-prereleases = true }
pylint = "^2.10.2"
nbval = "^0.9.6"

[build-system]
    requires = ["poetry>=0.12"]
    build-backend = "poetry.masonry.api"